# ATC_LLM

./: .coverage  .env  .gitignore  DEPENDENCY_MATRIX.md  ENHANCED_FEATURES_GUIDE.md  ENVIRONMENT_VARIABLES.md  FUNCTION_DEPENDENCY_TREE.md  IMPLEMENTATION_SUMMARY.md  README.md  README_NEW.md  SPRINT0_COMPLETE.md  SPRINT2_3_IMPLEMENTATION_REPORT.md  UPDATE_SUMMARY.md  WORKFLOW_RESULTS_SUMMARY.md  __init__.py  add_conflict_test.py  analyze_tests.py  atc-llm.bat  atc-llm.sh  atc_automation_engine.py  atc_llm_wrapper.py  batch_scat_llm_processor.py  bluesky_demo.py  cli.py  create_close_encounter.py  create_exact_conflict.py  create_forced_exact_conflict.py  create_precision_conflict.py  data_analyst_comparative.py  data_analyst_simplified.py  debug_ollama.py  debug_scat.py  deduplication_report.py  demo_atc_automation.py  demo_atc_automation_simplified.py  demo_baseline_vs_llm.py  demo_bluesky_baseline.py  demo_enhanced_scenarios.py  demo_sprint2_sprint3.py  demo_systematic_scenarios.py  (+29 more)
backup/: asas_integration.py.backup  atc-llm.py.backup  batch_scat_llm_processor.py.backup  cli.py.backup  comparison_tool.py.backup  complete_llm_demo.py.backup  complete_scat_llm_simulation.py.backup  detect.py.backup  enhanced_scat_llm_simulation.py.backup  final_llm_test.py.backup  geodesy.py.backup  metrics.py.backup  monte_carlo_intruders.py.backup  organize_output_structure.py.backup  pipeline.py.backup  production_batch_processor.py.backup  real_llm_verification.py.backup  repo_healthcheck.py.backup  resolve.py.backup  show_prompt_examples.py.backup  test_batch_processing.py.backup  test_enhanced_features.py.backup  test_geodesy.py.backup  test_resolve.py.backup  test_sprint2_sprint3.py.backup  unicode_cleaner.py.backup  verify_llm_communication.py.backup  visualize_conflicts.py.backup
logs/: agents.md
results/: atc_automation_summary.json  automation_summary_20250810_201449.json  min_sep_series_20250810_201449.jsonl
sample_data/: baseline_sep.csv  events.csv  metrics_wolfgang.csv  planned_track.csv  resolved_sep.csv  resolved_track.csv
scat_export_test/: ownship_track_NAX3580.jsonl
scenarios/: blue_sky_init.txt  sample_scat_ownship.json
scripts/: complete_scat_llm_simulation.py  debug_bluesky.py  enhanced_batch_scat_simulation.py  enhanced_scat_llm_simulation.py  enhanced_scat_simulation_20250808_152019.json  repo_healthcheck.py  run_route_conflict_full.py  run_scat_once.py  scat_llm_final_metrics_20250808_150531.json  scat_llm_performance_summary_20250808_150531.csv  scat_llm_performance_summary_20250808_152230.csv  scat_llm_plots_20250808_150531.json  scat_llm_plots_20250808_152230.json  scat_llm_simulation_complete_20250808_152230.json  scat_simulation_fixed.py  simple_scat_simulation.py  test_vicinity_performance.py  unicode_cleaner.py
src/: atc_llm_cli.py
test_scat_data_demo/: demo_flight.json
tests/: DEPENDENCY_MATRIX.md  ENHANCED_ASAS_LLM_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  (+67 more)
(+54 files in other folders)
